# biobank-variant-explorer

./: CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  variant_scanner.py
legacy/: batch_variant_check.sh
src/biobank_variant_explorer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/variant_explorer/: __init__.py  batch.py  cli.py  scanner.py
tests/: test_batch.py  test_scanner.py
